--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "js-first-practise",
   "version": "1.0.0",
   "description": "",
-  "type":"module",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/test.js",
     "build": "npx webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/Maurisz02/js-first-practise/issues"
   },
-  "homepage": "https://github.com/Maurisz02/js-first-practise#readme"
+  "homepage": "https://github.com/Maurisz02/js-first-practise#readme",
+  "dependencies": {
+    "bootstrap": "^5.2.1"
+  }
 }
